[1.8] Issue 4013: better positioning for inlineEditor on wrapped lines
http://code.google.com/p/fbug/source/detail?r=10173

--- a/extension/skin/classic/panelbase.css
+++ b/extension/skin/classic/panelbase.css
@@ -152,30 +152,29 @@ code {
 }
 
 .inlineEditor {
-    margin-left: 2px;
-    margin-top: 5px;
+    margin-left: -3px;
+    margin-top: -2px;
+    -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .textEditorInner,
 .fixedWidthEditor {
-    margin: 0 0 0 0 !important;
-    border: none !important;
+    margin: 0 !important;
     font: inherit;
     text-decoration: inherit;
     background-color: window;
     border: 1px solid #a0a0a0 !important;
-    -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
 
-.textEditorInner[saveSuccess='true'] {
+.inlineEditor[saveSuccess='true'] {
     -moz-box-shadow: 0 2px 6px rgba(0, 250, 0, 0.5);
 }
 
-.textEditorInner[saveSuccess='false'] {
+.inlineEditor[saveSuccess='false'] {
     -moz-box-shadow: 0 2px 6px rgba(250, 0, 0, 0.5);
 }
 
-.textEditorInner[saveSuccess='almost'] {
+.inlineEditor[saveSuccess='almost'] {
     -moz-box-shadow: 0 2px 6px rgba(250, 250, 0, 0.8);
 }
 
@@ -183,12 +182,11 @@ code {
     border-left: none !important;
     border-right: none !important;
     text-indent: 3px;
+    -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .textEditorInner {
     position: relative;
-    top: -7px;
-    left: -5px;
     padding: 1px;
 }
 
